<resources>
    <string name="app_name">HomeWork07</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myavatar">My Avatar</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="studentid">Student ID</string>
    <string name="department" translatable="false">Department:</string>
    <string name="cs">CS</string>
    <string name="SIS">SIS</string>
    <string name="bio">BIO</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="name">Name:</string>
    <string name="Studentid">Student ID</string>
    <string name="dept">Department</string>
</resources>
