<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_first"
            android:layout_width="372dp"
            android:layout_height="59dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="19dp"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_avatar" />

        <EditText
            android:id="@+id/et_last"
            android:layout_width="371dp"
            android:layout_height="65dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="19dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_first" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="369dp"
            android:layout_height="71dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="21dp"
            android:ems="10"
            android:hint="@string/studentid"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_last" />

        <ImageView
            android:id="@+id/iv_dp"
            android:layout_width="157dp"
            android:layout_height="131dp"
            android:layout_marginStart="127dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="127dp"
            android:src="@drawable/select_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_avatar"
            android:layout_width="108dp"
            android:layout_height="25dp"
            android:layout_marginStart="151dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="152dp"
            android:text="@string/myavatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="137dp"
            android:layout_height="29dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="251dp"
            android:text="@string/department"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_id" />

        <RadioGroup
            android:id="@+id/rg_dept"
            android:layout_width="371dp"
            android:layout_height="57dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="17dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/rb_cs"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:text="@string/cs" />

            <RadioButton
                android:id="@+id/rb_SIS"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SIS" />

            <RadioButton
                android:id="@+id/rb_BIO"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bio" />

            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other" />

        </RadioGroup>

        <Button
            android:id="@+id/bt_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="161dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_dept" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>