<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_dp"
            android:layout_width="157dp"
            android:layout_height="131dp"
            android:layout_marginStart="127dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="127dp"
            android:src="?attr/actionBarDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginTop="380dp"
            android:layout_marginEnd="161dp"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textview"
            app:layout_constraintTop_toBottomOf="@+id/iv_dp" />

        <TextView
            android:id="@+id/tv_dept"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/tv_id" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="55dp"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_dp" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="55dp"
            android:text="@string/Studentid"
            app:layout_constraintEnd_toStartOf="@+id/tv_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="55dp"
            android:text="@string/dept"
            app:layout_constraintEnd_toStartOf="@+id/tv_dept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>